# vivado-design-assist

./: .env.example  .gitignore  README.md  USAGE.md  claude.md  dev.sh  pyproject.toml  readme_first.md
.runs/impl_1/vmc_hooks/: vm_post_place.tcl  vm_post_route.tcl  vm_post_synth.tcl
.vmc/: settings.json
.vmc/reports/opt/: vm_cdc_opt.rpt  vm_clock_interaction_opt.rpt  vm_clock_networks_opt.rpt  vm_congestion_opt.rpt  vm_control_sets_opt.rpt  vm_drc_opt.rpt  vm_fail_fast_opt.rpt  vm_high_fanout_opt.rpt  vm_logic_level_opt.rpt  vm_methodology_opt.rpt  vm_ram_utilization_opt.rpt  vm_timing_opt.rpt  vm_utilization_opt.rpt
configs/rules/: methodology_rules.yaml  vivado_message_codes.yaml
docs/: 01_PRD_产品需求文档.md  02_技术方案文档.md  02_技术方案文档_续.md
frontend/: go.mod  main.go  wails.json
src/vivado_ai/: __init__.py
src/vivado_ai/api/: __init__.py  server.py
src/vivado_ai/cli/: main.py
src/vivado_ai/core/: ai_interpreter.py  claude_provider.py  engine.py  llm_provider.py  local_provider.py  openai_provider.py  scorer.py  vivado_bridge.py
src/vivado_ai/gui/: app.py  hooks.py  installer.py  tcl_client.py  tui.py  web_server.py
src/vivado_ai/models/: finding.py  issue.py  report.py
src/vivado_ai/utils/: config.py
tests/fixtures/reports/: clock_interaction_unsafe.rpt  methodology_violations.rpt  timing_summary_fail.rpt  timing_summary_pass.rpt
tests/fixtures/xdc/: complete_constraints.xdc  (+1 more)
tests/unit/: test_ai_enhancements.py  test_gui.py  test_log_parser.py  test_phase2_rules.py  test_report_parser.py  test_rule_engine.py  test_web_server.py  test_xdc_parser.py
(+15 files in other folders)
