[project]
name = "vivado-ai"
version = "0.2.0"
description = "Vivado Design Methodology Checker (UG949/UG1292)"
requires-python = ">=3.10"

dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "anthropic>=0.20",
    "openai>=1.0",
]

[project.optional-dependencies]
gui = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "psutil>=5.9",
    "watchdog>=3.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
]

[project.scripts]
vivado-ai = "vivado_ai.cli.main:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"
